# fractals

./: .gitignore  BUILDING.txt  CMakeLists.txt  README.md
first_mandlebrot/: CMakeLists.txt  main.cpp  mand.cpp  mand.frag  mand.hpp  passthrough.vert  text.cpp  text.frag  text.hpp
messing_around/: CMakeLists.txt  TransformVertexShader.glsl  main.cpp  mand.frag  mand.glsl  mand_single.frag  mand_single.glsl  passthrough.vert  texture.frag
second_mandlebrot/: CMakeLists.txt  init.frag  main.cpp  mand.cpp  mand.frag  mand.hpp  mand_kern.frag  mand_show.frag  passthrough.vert  text.cpp  text.hpp
